src/css/profile/mobile/common/dropdownmenu.less
@dropdown-options-margin: 6 * @px_base;

.ui-dropdownmenu-overlay {
	opacity: 0;
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 1200;
}

.ui-dropdownmenu {
	box-sizing: border-box;
	width: 100%;
	display: block;
	position: relative;
	&:focus {
		outline: none;
	}
	&:active {
		outline: none;
		.ui-dropdownmenu-placeholder {
			background-color: @color_dropdownmenu_placeholder_bg_press;
		}
	}
	&::before {
		content: "";
		opacity: 0;
		width: 90%;
		height: 26 * @px_base;
		background-color: @color_dropdownmenu_placeholder_bg_press_effect;
		position: absolute;
		top: 17 * @px_base;
		left: 5%;
		.transition-property(width, height, top, left);
		.transition-duration(.2s);
		.transition-timing-function();
	}
	&:active::before {
		content: "";
		opacity: 1;
		width: 94%;
		height: 40 * @px_base;
		background-color: @color_dropdownmenu_placeholder_bg_press_effect;
		position: absolute;
		top: 10 * @px_base;
		left: 3%;
	}
	.ui-dropdownmenu-placeholder {
		box-sizing: border-box;
		text-align: left;
		width: 100%;
		display: inline-block;
		vertical-align: middle;
		position: relative;
		height: 100%;
		line-height: 120 * @unit_base;
		white-space: nowrap;
		padding: 0 26 * @px_base 0 16 * @px_base;
		overflow: hidden;
		text-overflow: ellipsis;
		font-size: 17 * @px_base;
		text-indent: 5 * @px_base;
		background-color: @color_dropdownmenu_placeholder_bg;
		&::after {
			content: "";
			position: absolute;
			.calc-width(~"100% - " (64 * @unit_base));
			height: 1 * @px_base;
			bottom: 9 * @px_base;
			right: 16 * @px_base;
			background-color: @color_dropdownmenu_underline;
		}
	}
	select {
		width: 100%;
		display: none;
	}

	&.ui-focus {
		background-color: @color_dropdownmenu_placeholder_bg_press_effect;
	}
}

.ui-dropdownmenu-inline {
	width: auto;
	display: inline-block;
}

.ui-dropdownmenu-disabled {
	opacity: 1;
	.ui-dropdownmenu-placeholder {
		color: var(--dropdown-menu-options-color-dim);
	}
}

.ui-dropdownmenu-native {
	select {
		display: block;
		top: 0;
		left: 0;
		position: absolute;
		height: 100%;
		outline: 0;
		opacity: 0;
		border: 0;
		margin: 0;
	}
}

.ui-dropdownmenu-overlay-hidden {
	display: none;
}

.open-to-bottom() {
	from {
		opacity: .5;
		.transform(translate3d(0, -100%, 0));
	}
	to {
		opacity: 1;
		.transform(translate3d(0, 0, 0));
	}
}

.open-to-top() {
	from {
		opacity: .5;
		.transform(translate3d(0, 100%, 0));
	}
	to {
		opacity: 1;
		.transform(translate3d(0, 0, 0));
	}
}

.close-to-bottom() {
	from {
		opacity: 1;
		.transform(translate3d(0, 0, 0));
	}
	to {
		opacity: 0;
		.transform(translate3d(0, 100%, 0));
	}
}

.close-to-top() {
	from {
		opacity: 1;
		.transform(translate3d(0, 0, 0));
	}
	to {
		opacity: 0;
		.transform(translate3d(0, -100%, 0));
	}
}

@-webkit-keyframes open-to-bottom {
	.open-to-bottom();
}

@-webkit-keyframes open-to-top {
	.open-to-top();
}

@-webkit-keyframes close-to-bottom {
	.close-to-bottom();
}

@-webkit-keyframes close-to-top {
	.close-to-top();
}

// Options
.ui-dropdownmenu-options-wrapper {
	position: absolute;
	visibility: hidden;
	top: -5000 * @px_base;
	overflow: hidden;
	z-index: 1201;
	min-width: 168px;
	max-width: 100vw;
	&.ui-dropdownmenu-options-vertical-margins {
		margin-top: @dropdown-options-margin;
		margin-bottom: @dropdown-options-margin;
	}
	&.ui-dropdownmenu-active {
		visibility: visible;
		overflow-y: auto;
	}
	&.ui-dropdownmenu-options-opened {
		border-top: 1 * @px_base solid @color_dropdownmenu_list_group_stroke;
		border-bottom: 1 * @px_base solid @color_dropdownmenu_list_group_stroke;
	}
	// top, bottom classes just describes direction in which menu is animated.
	&.ui-dropdownmenu-options-top {
	}
	&.ui-dropdownmenu-options-bottom {
	}
	&.ui-dropdownmenu-options-opening.ui-dropdownmenu-options-top .ui-dropdownmenu-options {
		.animation(open-to-top 300ms);
	}
	&.ui-dropdownmenu-options-opening.ui-dropdownmenu-options-bottom .ui-dropdownmenu-options {
		.animation(open-to-bottom 300ms);
	}
	&.ui-dropdownmenu-options-closing.ui-dropdownmenu-options-top .ui-dropdownmenu-options {
		.animation(close-to-bottom 300ms);
	}
	&.ui-dropdownmenu-options-closing.ui-dropdownmenu-options-bottom .ui-dropdownmenu-options {
		.animation(close-to-top 300ms);
	}
	.ui-dropdownmenu-options {
		box-sizing: border-box;
		list-style: none;
		padding: 0;
		margin: 0;
		max-height: calc(~"100vh - "2 * @dropdown-options-margin);
		overflow-y: auto;
		background-color: var(--dropdown-menu-options-background);
		border-radius: 26 * @px_base;
		box-shadow: 0 0 3 * @px_base 0 @dropdown-list-box-shadow-color;
		border: var(--dropdown-menu-options-border);
		&:focus {
			outline: none;
		}
		.ui-dropdownmenu-disabled {
			color: var(--dropdown-menu-options-color-dim);
		}

		.ui-dropdownmenu-selected {
			color: var(--primary-dark-color);
			.font(medium);

			&::after {
				width: 20 * @px_base;
				height: 20 * @px_base;
				margin-left: 16 * @px_base;
				margin-right: 24 * @px_base;
				content: '';
				position: absolute;
				mask-image: url('images/1_App_bar/tw_ic_ab_back_mtrl.svg');
				mask-size: 100%, 0;
				mask-position: center;
				mask-repeat: no-repeat;
				right: 0;
				transform: translateY(-50%);
				top: 50%;
				background-color: var(--primary-dark-color);
			}
		}
		li {
			padding: 15 * @px_base 60 * @px_base 15 * @px_base 24 * @px_base;
			font-size: 17 * @px_base;
			.font(regular);
			display: block;
			position: relative;
			overflow: hidden;
			text-overflow: ellipsis;
			color: var(--dropdown-menu-options-color);
			&.ui-dropdown-two-lines {
				max-height: 2em;	// FIXME: max-height should be 2 * line-height but gives more than two lines.
				line-height: 1.4em;
				// FIXME: add support for text ellipsis for second line manually since
				//		  -webkit-line-clamp does not work on Tizen Emulator 5.5.
			}
			&:not(.ui-dropdown-two-lines) {
				white-space: nowrap;
				height: 20 * @px_base;
			}
			&:focus, &:active {
				outline: none;
			}

			&::before {
				content: "";
				position: absolute;
				top: 0;
				left: 0;
				width: 100%;
				height: 100%;
				background-color: var(--ripple-color);
				opacity: 0;
			}
			&:active::before {
				opacity: 1;
			}
		}
	}
}

.ui-dropdownmenu-active::-webkit-scrollbar {
	display: none;
}

.ui-listview li.ui-li-static.ui-li-has-dropdownmenu {
	padding: 0;
	.ui-dropdownmenu-placeholder {
		line-height: 60 * @px_base;
	}
}

.ui-li-static.ui-li-has-dropdownmenu {
	height: 60 * @px_base;
}

